Updating chess core logic. Refactored domain classes and mappers